(Feat):get specific task
