# routes/Task.go
@@ -55,3 +55,75 @@ func CreateTask(context *gin.Context) {
 		Message: "Task created successfully",
 	})
 }
+
+// GetTask godoc
+// @Summary      Get all tasks for the authenticated user
+// @Description  Returns a list of tasks belonging to the logged-in user
+// @Tags         tasks
+// @Produce      json
+// @Success      200  {array}   model.Task
+// @Failure      401  {object}  Response
+// @Failure      500  {object}  Response
+// @Security TokenAuth
+// @Router  /task/alltask [get]
+func GetAllTask(context *gin.Context) {
+	idVal, exists := context.Get("Id")
+	if !exists {
+		context.AbortWithStatusJSON(http.StatusUnauthorized, Response{
+			Message: "Unauthorized: user ID not found",
+		})
+		return
+	}
+
+	userID := idVal.(uint)
+
+	tasks, err := services.GetTask(userID)
+	if err != nil {
+		context.AbortWithStatusJSON(http.StatusInternalServerError, Response{
+			Message: "Failed to fetch tasks",
+		})
+		return
+	}
+
+	context.JSON(http.StatusOK, tasks)
+}
+
+// GetTask godoc
+// @Summary      Get tasks for the authenticated user
+// @Description  Retrieves all tasks for the logged-in user. You can filter by status using a query parameter.
+// @Tags         Tasks
+// @Accept       json
+// @Produce      json
+// @Param        status   query     string  True "Task status filter (e.g. 'pending', 'completed')"
+// @Success      200      {array} model.Task
+// @Failure      400      {object}  Response
+// @Failure      401      {object}  Response
+// @Failure      500      {object}  Response
+// @Security TokenAuth
+// @Router /task/specifictask [get]
+func GetTask(context *gin.Context) {
+
+	idVal, exists := context.Get("Id")
+	if !exists {
+		context.AbortWithStatusJSON(http.StatusUnauthorized, Response{
+			Message: "Unauthorized: user ID not found",
+		})
+		return
+	}
+	userID := idVal.(uint)
+
+	status := context.Query("status")
+
+	tasks, err := services.GetTaskBasedOnStat(userID, status)
+	if err != nil {
+		context.JSON(http.StatusInternalServerError, Response{
+			Message: "Failed to fetch tasks",
+		})
+		return
+	}
+
+	context.JSON(http.StatusOK, gin.H{
+		"message": "Tasks retrieved successfully",
+		"tasks":   tasks,
+	})
+}
